kustomize/base/grade-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: grade-submission-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grade-submission-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - dev-grade-submission-gateway
  http:
  - match:
    - uri:
        exact: /grades
    route:
    - destination:
        host: dev-grade-submission-api
        port:
          number: 3000
